--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.28)
+cmake_minimum_required(VERSION 3.25)
 project(Pacey)
 
 set(CMAKE_CXX_STANDARD 23)
@@ -18,6 +18,14 @@ add_executable(Pacey
         includes/packet.hpp
 
         sources/main.cpp
+        includes/connection_state.hpp
+        includes/packets/keep_alive_packet.hpp
+        includes/packets/plugin_message_packet.hpp
+        includes/packets/query_block_entity_tag_packet.hpp
+        includes/packets/spawn_entity_packet.hpp
+        includes/packets/client_infos_packet.hpp
+        includes/packets/finish_config.hpp
+        includes/packets/bundke.hpp
 )
 
 target_link_libraries(Pacey ws2_32)
